fix: invisible BibTeX citation in dark mode
Regression from migration of HLJS to Hugo's Chroma.

Fix #2753

--- a/wowchemy/assets/scss/wowchemy/_dark.scss
+++ b/wowchemy/assets/scss/wowchemy/_dark.scss
@@ -48,6 +48,7 @@ body.dark,
 .dark pre {
   /* Match `pre` bg color. */
   border-color: rgb(68, 71, 90);
+  color: #fff;  // Override Bootstrap default (light mode only)
 }
 
 .dark mark,
